Push latest changes - Cleanup of React components - Extend HubHelpers - Properly show current user
